[package]
name = "mockingbird"
version = "0.1.0"
description = "Simple ecs-integrated replication for bevy"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bincode = { git = "https://github.com/bincode-org/bincode", branch = "trunk" }
bitpacking = "0.8.4"
flate2 = "1.0"
zstd = "0.9.2+zstd.1.5.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "zlib_encode"
path = "benches/compression.rs"
harness = false